<?xml version="1.0"?>
<package>
    <name>control_launch</name>
    <version>0.0.0</version>
    <description>The control_launch package</description>

    <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>
    
    <license>TBD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>