<?xml version="1.0"?>
<package>
    <name>px4_interface</name>
    <version>0.0.0</version>
    <description>The px4_interfacepackage</description>

    <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>

    <license>TBD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>