<?xml version="1.0"?>
<package>
    <name>system_launch</name>
    <version>0.0.0</version>
    <description>The system_launch package</description>

    <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>
    
    <license>TBD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>